
o updated `EGA` functionality: message for 'gamma' value used and `EGA.estimate` compatiability

o removed *iterators* dependency

o ordering and name fix in `net.loads`

o auto-adjusts y-axis label size for `itemStability` plot based on number of nodes or length of node names


Changes in version 0.9.0

o updated list of dependencies

o added ORCiDs in Description file

o corrected ordering of `net.loads` output

o corrected standard error in `bootEGA`

o citation update

o added function `dimStability` to compute dimensional stability

o added a series of functions for `node.redundant`, which facilitates detecting and combining redundant nodes in networks

o updated the EGA.fit function, so now a correlation matrix can be used as well.


Changes in version 0.8.0

o 'bootEGA' now computes time until bootstrap is finished

o new functions 'cmi', 'pmi' and 'residualEGA' added: 'cmi' computes conditional mutual information, 'pmi' computes partial mutual information and residual EGA computes an EGA network controlling for wording effects

o new dataset 'optimism' added

o documentation and functionality for several functions updated


Changes in version 0.7.0

o fixed 'EGA' bug in 'bootEGA' function; updated 'bootEGA' documentation; added progress messages

o migrated 'net.scores' and 'net.loads' from 'NetworkToolbox' to 'EGAnet' package

o functions 'itemConfirm' and 'itemIdent' have been merged into a single function called, 'itemStability'

o fixed item ordering in 'itemStability' output so dimensions are from least to greatest, the colors match the original community vector input, and updated average standardized network loadings to the 'net.loads' function

o added datasets 'ega.wmt' and 'boot.wmt' for quick user-friendly examples (also removed all '\donttest')

o added package help page

o added package load message

o updated 'itemStability' algorithm (now can accept any number of 'orig.wc') and enforced '0' to '1' bounds on plot