@@ -12,7 +12,7 @@
 
 <meta name="author" content="Alexander P. Christensen" />
 
-<meta name="date" content="2020-02-01" />
+<meta name="date" content="2020-02-02" />
 
 <title>Network Scores</title>
 
@@ -303,7 +303,7 @@ code > span.er { color: #a61717; background-color: #e3d2d2; }
 
 <h1 class="title toc-ignore">Network Scores</h1>
 <h4 class="author">Alexander P. Christensen</h4>
-<h4 class="date">2020-02-01</h4>
+<h4 class="date">2020-02-02</h4>
 
 
 
